# whatsapp_bot_automation

./: .gitignore  README.md  deploy-ec2.sh  docker-compose.yml  ecosystem.config.js  main.py  manage.sh
.gemini/: GEMINI.md
backend/: .env.example  .env.sample  pyproject.toml  requirements.txt  test_analysis.py  test_webhook.py
backend/src/: config.py  main.py
backend/src/agents/: commit_analysis_agent.py  report_aggregation_agent.py  task_agent.py
backend/src/agents/tools/: analysis_tools.py
backend/src/api/: main.py  models.py  routes.py  settings_models.py
backend/src/api/controllers/: webhook_controller.py
backend/src/api/models/: __init__.py
backend/src/api/routes/: __init__.py  commits.py  repositories.py  settings.py  webhooks.py
backend/src/api/services/: webhook_service.py
backend/src/integration/: commits.py  database.py  github_client.py  repositories.py  settings.py  task_repository.py
backend/src/services/: analysis_service.py  notification_service.py  report_service.py  task_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
whatsapp-bridge/: index.js  package.json  pnpm-lock.yaml
whatsapp-bridge/auth_info_baileys/: app-state-sync-key-AAAAAAZ1.json  app-state-sync-key-AAAAAAZj.json  app-state-sync-key-AAAAAAZl.json  app-state-sync-key-AAAAAAZn.json  app-state-sync-key-AAAAAAZp.json  app-state-sync-key-AAAAAAZr.json  app-state-sync-key-AAAAAAZt.json  app-state-sync-key-AAAAAAZv.json  app-state-sync-key-AAAAAAZx.json  app-state-sync-key-AAAAAAZz.json  app-state-sync-key-AEMAAAZ0.json  creds.json  (+835 more)
(+12 files in other folders)
