[project]
name = "whatsapp-task-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "fastapi>=0.128.4",
    "langchain-anthropic>=1.3.2",
    "langchain-openai>=1.1.7",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
deepagents = { git = "https://github.com/langchain-ai/deepagents.git", subdirectory = "libs/deepagents" }
